Fix left aligned WhatIsThis

--- a/src/components/SectionWhatIsIt/SectionWhatIsIt.css
+++ b/src/components/SectionWhatIsIt/SectionWhatIsIt.css
@@ -50,6 +50,7 @@
 .paragraph {
   font-size: 18px;
   line-height: 1.5em;
+  text-align: left;
 }
 
 .paragraph span {
